--- a/VoteForYou/app/src/main/res/layout/activity_settings.xml
+++ b/VoteForYou/app/src/main/res/layout/activity_settings.xml
@@ -72,4 +72,15 @@
         android:text="@string/button_results"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/currentUserText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="152dp"
+        android:layout_marginTop="152dp"
+        android:text="User's Name"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
